<?xml version="1.0" encoding="utf-8"?>

<TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 8 rows with 2 columns (last one with colspan 2) -->
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tx_bank"
                android:text="@string/tx_bank"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
                android:id="@+id/tv_bank"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tx_card_number"
                android:text="@string/tx_card_number"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
                android:id="@+id/tv_card_number"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tx_establishment"
                android:text="@string/tx_establishment"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
                android:id="@+id/tv_establishment"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tx_price"
                android:text="@string/tx_price"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
                android:id="@+id/tv_price"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tx_date"
                android:text="@string/tx_date"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
                android:id="@+id/tv_date"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tx_hour"
                android:text="@string/tx_hour"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
                android:id="@+id/tv_hour"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tx_category"
                android:text="@string/tx_category"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_span="2"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_span="2"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/btn_save_category"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/btn_confirm_purchase"
                android:layout_weight="1"/>
    </TableRow>
</TableLayout>